<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_settings">

        <Preference
            android:key="pref_cat_ui"
            android:icon="@drawable/ic_image_24dp"
            android:summary="@string/summary_settings_ui"
            android:title="@string/title_settings_ui" />

        <Preference
            android:key="pref_cat_routing"
            android:icon="@drawable/ic_routing_24dp"
            android:summary="@string/summary_settings_routing"
            android:title="@string/title_settings_routing" />

        <Preference
            android:key="pref_cat_vpn"
            android:icon="@drawable/ic_privacy_24dp"
            android:summary="@string/summary_settings_vpn"
            android:title="@string/title_settings_vpn" />

        <Preference
            android:key="pref_cat_dns"
            android:icon="@drawable/ic_language_24dp"
            android:summary="@string/summary_settings_dns"
            android:title="@string/title_settings_dns" />

        <Preference
            android:key="pref_cat_advanced"
            android:icon="@drawable/ic_bolt_24dp"
            android:summary="@string/summary_settings_advanced"
            android:title="@string/title_settings_advanced" />

        <Preference
            android:key="pref_cat_tools"
            android:icon="@drawable/ic_settings_24dp"
            android:summary="@string/summary_settings_tools"
            android:title="@string/title_settings_tools" />

    </PreferenceCategory>

</PreferenceScreen>
