<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sub_update"
        android:icon="@drawable/ic_refresh_24dp"
        android:title="@string/title_sub_update"
        app:showAsAction="always" />
    <item
        android:id="@+id/import_qrcode"
        android:icon="@drawable/ic_scan_24dp"
        android:title="@string/menu_item_import_config_qrcode"
        app:showAsAction="never" />
    <item
        android:id="@+id/import_clipboard"
        android:icon="@drawable/ic_copy"
        android:title="@string/menu_item_import_config_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/service_restart"
        android:title="@string/title_service_restart"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_all"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/title_export_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/ping_all"
        android:title="@string/title_ping_all_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/real_ping_all"
        android:title="@string/title_real_ping_all_server"
        app:showAsAction="never" />
</menu>
