<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/routing_settings_title">

        <Preference
            android:key="pref_per_app_proxy"
            android:icon="@drawable/ic_per_apps_24dp"
            android:summary="@string/summary_pref_per_app_proxy"
            android:title="@string/per_app_proxy_settings" />

        <Preference
            android:key="pref_routing_setting"
            android:icon="@drawable/ic_routing_24dp"
            android:summary="@string/summary_pref_routing_setting"
            android:title="@string/routing_settings_title" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/outbound_domain_resolve_method"
            android:entryValues="@array/outbound_domain_resolve_method_value"
            android:key="pref_outbound_domain_resolve_method"
            android:summary="%s"
            android:title="@string/title_outbound_domain_resolve_method" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sniffing_enabled"
            android:summary="@string/summary_pref_sniffing_enabled"
            android:title="@string/title_pref_sniffing_enabled" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_route_only_enabled"
            android:summary="@string/summary_pref_route_only_enabled"
            android:title="@string/title_pref_route_only_enabled" />

    </PreferenceCategory>

</PreferenceScreen>
